# epigraph

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  main.py  pyproject.toml
frontend/src/: App.tsx
init-scripts/: init-multiple-dbs.sh
static/: index-CM0mCTP-.css  index-_4jnDoPb.js
templates/: index.html
