[tool.poetry]
name = "epigraph"
version = "0.1.0"
description = ""
authors = ["Hossein Fakhari <fakhari.hossein@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.6"}
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
